--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             border: 1px solid var(--border-color);
             padding: 1.5rem;
             box-shadow: 0 0 50px rgba(0, 0, 0, 0.6), inset 0 0 20px rgba(229, 158, 255, 0.1);
-            height: 100%; /* Make panels equal height in grid */
+            margin-bottom: 2rem;
         }
 
         .panel-title {
@@ -113,17 +113,10 @@
             text-shadow: 0 0 8px var(--glow-color);
         }
 
-        .main-layout-grid {
-            display: grid;
-            grid-template-columns: 1fr 1.2fr; /* Swapped order */
-            gap: 2rem;
-            margin-bottom: 2rem;
-            align-items: start;
-        }
-
+        /* Updated Clock Grid for wider cards */
         .clock-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
             gap: 1.5rem;
         }
 
@@ -145,7 +138,7 @@
 
         .clock-card .name { font-size: 1.2rem; font-weight: 600; }
         .clock-card .country, .clock-card .tz-name { font-size: 0.8rem; color: var(--text-muted); margin-bottom: 0.5rem; min-height: 1.2rem; }
-        .clock-card .time { font-family: 'Orbitron', sans-serif; font-size: 2.1rem; font-weight: 700; color: var(--glow-color); text-shadow: 0 0 8px var(--glow-color); margin: 0.5rem 0; }
+        .clock-card .time { font-family: 'Orbitron', sans-serif; font-size: 2.2rem; font-weight: 700; color: var(--glow-color); text-shadow: 0 0 8px var(--glow-color); margin: 0.5rem 0; }
         .clock-card .date { font-size: 0.8rem; color: var(--text-muted); }
         .clock-card .time-of-day { font-size: 0.9rem; font-weight: 600; color: var(--secondary-glow); text-transform: uppercase; letter-spacing: 1px; margin-top: 0.75rem; min-height: 1.4rem; }
 
@@ -164,12 +157,6 @@
         .live-time-display .date { font-size: 1rem; color: var(--text-muted); }
         .live-time-display .time-of-day { font-size: 1rem; font-weight: 600; color: var(--secondary-glow); margin-top: 0.5rem; }
         .comparison-icon { font-size: 2.5rem; color: var(--secondary-glow); text-shadow: 0 0 10px var(--secondary-glow); }
-
-        @media (max-width: 1200px) {
-            .main-layout-grid {
-                grid-template-columns: 1fr;
-            }
-        }
 
         @media (max-width: 900px) {
             .live-converter-grid { grid-template-columns: 1fr; gap: 1.5rem; }
@@ -195,37 +182,35 @@
 
     <div class="container">
         <header>
-            <h1>Cosmic Clock</h1>
+            <h1>World Clock</h1>
             <p>Your portal to global time.</p>
         </header>
 
         <main>
-            <div class="main-layout-grid">
-                <!-- City Clocks Panel (NOW FIRST) -->
-                <section class="glass-panel">
-                    <h2 class="panel-title">World Clocks</h2>
-                    <div id="city-clocks-grid" class="clock-grid"></div>
-                </section>
+            <!-- World Clocks Panel (FULL WIDTH) -->
+            <section class="glass-panel">
+                <h2 class="panel-title">World Clocks</h2>
+                <div id="city-clocks-grid" class="clock-grid"></div>
+            </section>
 
-                <!-- New Live Time Converter (NOW SECOND) -->
-                <section class="glass-panel">
-                    <h2 class="panel-title">Live City Time Comparison</h2>
-                    <div class="live-converter-grid">
-                        <div class="converter-side">
-                            <select id="city-select-1"></select>
-                            <div id="live-display-1" class="live-time-display"></div>
-                        </div>
-                        <div class="comparison-icon">&#x2194;</div>
-                        <div class="converter-side">
-                            <select id="city-select-2"></select>
-                            <div id="live-display-2" class="live-time-display"></div>
-                        </div>
+            <!-- Live Time Comparison Panel (FULL WIDTH) -->
+            <section class="glass-panel">
+                <h2 class="panel-title">Live City Time Comparison</h2>
+                <div class="live-converter-grid">
+                    <div class="converter-side">
+                        <select id="city-select-1"></select>
+                        <div id="live-display-1" class="live-time-display"></div>
                     </div>
-                </section>
-            </div>
+                    <div class="comparison-icon">&#x2194;</div>
+                    <div class="converter-side">
+                        <select id="city-select-2"></select>
+                        <div id="live-display-2" class="live-time-display"></div>
+                    </div>
+                </div>
+            </section>
 
-            <!-- Timezone Clocks Panel -->
-            <section class="glass-panel" style="margin-top: 2rem;">
+            <!-- Live Timezones Panel (FULL WIDTH) -->
+            <section class="glass-panel">
                 <h2 class="panel-title">Live Timezones</h2>
                 <div id="timezone-clocks-grid" class="clock-grid"></div>
             </section>
